[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Music/mainMenuLoop.ogg" type="AudioStream" id=3]
[ext_resource path="res://VolumeControl.gd" type="Script" id=4]
[ext_resource path="res://menuFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Levels/Options_menu.gd" type="Script" id=6]
[ext_resource path="res://.import/mini-wakuwaku-maru.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 5
outline_color = Color( 0.196078, 0.0588235, 0.364706, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="Menu" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureRect" parent="."]
margin_top = -70.0
margin_right = 1030.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
expand = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 500, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
script = ExtResource( 4 )

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 400.0
margin_top = 400.0
margin_right = 600.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 200.0
margin_bottom = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Start Game"
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "Quit Game"
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "Options"
__meta__ = {
"_edit_lock_": true
}

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 200.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
__meta__ = {
"_edit_lock_": true
}

[node name="Options_menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="Options_menu"]
position = Vector2( -200, 153.077 )
scale = Vector2( 1.33333, 1.07692 )
color = Color( 0.231373, 0.0705882, 0.384314, 1 )
polygon = PoolVector2Array( 630, 220, 780, 220, 810, 248.999, 810, 323.998, 780, 350, 630, 350, 600, 320.998, 600, 248.999 )

[node name="Polygon2D2" type="Polygon2D" parent="Options_menu"]
position = Vector2( -132.857, 196.923 )
scale = Vector2( 1.2381, 0.923077 )
color = Color( 0.584314, 0.584314, 0.584314, 1 )
polygon = PoolVector2Array( 630, 220, 780, 220, 810, 248.999, 810, 323.998, 780, 350, 630, 350, 600, 320.998, 600, 248.999 )

[node name="VBoxContainer" type="VBoxContainer" parent="Options_menu"]
margin_left = 640.0
margin_top = 410.0
margin_right = 840.0
margin_bottom = 530.0

[node name="Label" type="Label" parent="Options_menu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
text = "Sound Volume"
align = 1

[node name="HBoxContainer" type="MarginContainer" parent="Options_menu/VBoxContainer"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 35.0

[node name="Sound_Volume" type="HSlider" parent="Options_menu/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="Options_menu/VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 5 )
text = "SFX Volume"
align = 1

[node name="HBoxContainer2" type="MarginContainer" parent="Options_menu/VBoxContainer"]
margin_top = 58.0
margin_right = 200.0
margin_bottom = 74.0

[node name="SFX_Volume" type="HSlider" parent="Options_menu/VBoxContainer/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0
ticks_on_borders = true

[node name="HSplitContainer" type="HBoxContainer" parent="Options_menu/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Options_menu/VBoxContainer/HSplitContainer"]
margin_top = 4.0
margin_right = 97.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
text = "Player Sprite"

[node name="player_sprite_on" type="CheckBox" parent="Options_menu/VBoxContainer/HSplitContainer"]
margin_left = 101.0
margin_right = 125.0
margin_bottom = 24.0

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2( -200, 213.077 )
scale = Vector2( 1.33333, 1.07692 )
color = Color( 0.231373, 0.0705882, 0.384314, 1 )
polygon = PoolVector2Array( 292.501, -160.715, 307.501, -77.1431, 375.001, -58.5717, 727.502, -77.1431, 802.502, -151.429, 720.002, -188.572 )

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2( -132.857, 256.923 )
scale = Vector2( 1.2381, 0.923077 )
color = Color( 0.584314, 0.584314, 0.584314, 1 )
polygon = PoolVector2Array( 276.922, -224.167, 284.999, -148.333, 349.614, -126.667, 721.151, -148.333, 785.766, -213.333, 713.074, -256.667 )

[node name="Label" type="Label" parent="."]
margin_left = 75.0
margin_top = 74.0
margin_right = 927.0
margin_bottom = 171.0
rect_rotation = -4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.054902, 0.984314, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.403922, 0.976471, 1 )
custom_colors/font_color_shadow = Color( 0.87451, 0, 1, 1 )
text = "Slime Rave"
align = 1
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="value_changed" from="Options_menu/VBoxContainer/HBoxContainer/Sound_Volume" to="Options_menu" method="_on_Sound_Volume_value_changed"]
[connection signal="value_changed" from="Options_menu/VBoxContainer/HBoxContainer2/SFX_Volume" to="Options_menu" method="_on_SFX_Volume_value_changed"]
[connection signal="toggled" from="Options_menu/VBoxContainer/HSplitContainer/player_sprite_on" to="Options_menu" method="_on_player_sprite_on_toggled"]
